fix login and register style, fix layout bug

--- a/src/main/resources/static/assets/css/main.css
+++ b/src/main/resources/static/assets/css/main.css
@@ -560,6 +560,7 @@ html {
     Typography css start
 ---------------------------------*/
 body {
+  overflow-x:hidden;
   font-family: var(--rr-ff-body);
   font-size: var(--rr-fs-body);
   line-height: var(--rr-lh-body);
